# leptos-rsx

./: .gitignore  .vscodeignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/: completions.ts  decorations.ts  extension.ts  hover.ts  hoverTrim.ts  htmlDoc.ts  leptosData.ts  rsxContext.ts  rsxRegions.ts  semanticFilter.ts  tokenFilter.ts  vscode-html-internal.d.ts
syntaxes/: leptos-rsx.injection.tmLanguage.json
test/: smoke.cjs
test/fixtures/: Cargo.toml  theme_switch.rs  theme_switch.rs.snap
test/fixtures/src/: lib.rs
test/unit/: hoverTrim.test.ts  rsxContext.test.ts  rsxRegions.test.ts  tokenFilter.test.ts
